--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,13 +8,39 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     
     steps:
     - uses: actions/checkout@v3
 
-    - name: Build and Deploy React app to GitHub Pages
-      uses: omkartapale/react-deployment-gh-pages@v1.0.0
-      with: 
-        working-directory: ./docs
+    - run : npm i
+      shell: bash
+      working-directory: ./docs
+
+    - run : npm ci
+      shell: bash
+      working-directory: ./docs
+
+    - run : npm run build
+      shell: bash
+      working-directory: ./docs
+
+    - run : git config user.name github-actions
+      shell: bash
+      working-directory: ./docs
+
+    - run : git config user.email github-actions@github.com
+      shell: bash
+      working-directory: ./docs
+
+    - run : git --work-tree build add --all
+      shell: bash
+      working-directory: ./docs
+
+    - run : git commit -m "Automatic Build and Deploy run by GitHub Actions"
+      shell: bash
+      working-directory: ./docs
+
+    - run : git push origin HEAD:gh-pages --force
+      shell: bash
+      working-directory: ./docs
