--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    
+
     steps:
     - uses: actions/checkout@v3
 
@@ -33,11 +33,19 @@ jobs:
 
   # Deployment job
   deploy:
+
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
+
     runs-on: ubuntu-latest
+
     needs: build
+    
+    permissions:
+      id-token: write
+      pages: write
+
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
